# Dashboard

./: .cache.sqlite  .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  README.md  TG bot documentation.docx  TG bot documentation.txt  desktop.ini  indicadores.json  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_estorninos.py  run_tomorrow.py  run_yesterday.py  setup.cfg  setup.py  streamlit_app.py  update_all_tables.py
.streamlit/: config.toml
apps/estorninos/: app_Estorninos.py  historico_spot.py  historico_temperaturas.py  mensaje.py
apps/tomorrow/: app_Tomorrow.py  app_Tomorrow1.py
apps/yesterday/: OPENMETEO_import.py  PVGIS_import.py  PVGIS_sintesis.py  SOM_prices_update.py  SOM_update.py  SWIBE_update.py  WIBEE_update.py  aerotermia.py  app_Yesterday.py  app_mostrar_energia_mes.py  dashboard_mostrar_weather.py  energia_mes.py  power_weather_correlation.py
comun/: async_tasks.py  costes_regulados.json  costes_regulados.py  date_conditions.py  get_ESIOS_data.py  get_ESIOS_indicator.py  get_PVGIS.py  get_openmeteo.py  get_prices_OMIE.py  get_prices_Som.py  get_prices_forecast.py  get_user_location.py  mensaje.py  safe_request.py  sql_utilities.py
dashboard/: .gitignore  __init__.py
dashboard/apps/: __init__.py  config.py
dashboard/apps/estorninos/: REData.py  __init__.py  agenda_ponderada.py  analisis_forecast.py  app_Estorninos.py  enviar_encuesta.py  enviar_mensaje.py  historico_spot.py  historico_temperaturas.py  mostrar_agenda.py
dashboard/apps/tomorrow/: __init__.py  app_Tomorrow.py
dashboard/apps/yesterday/: ESIOS_update.py  OPENMETEO_import.py  PVGIS_sintesis.py  SOM_update.py  WIBEE_update.py  __init__.py  aerotermia.py  analysis_energy_spot_correlation.py  analysis_power_weather_correlation.py  analysis_som_spot_correlation.py  app_Yesterday.py  dashboard_mostrar_weather.py  energia_mes.py  mostrar_factura.py  power_weather_correlation.py
dashboard/comun/: __init__.py  async_tasks.py  costes_regulados.py  date_conditions.py  get_DATADIS_data.py  get_ESIOS_data.py  get_ESIOS_forecast.py  get_ESIOS_indicator.py  get_PVGIS.py  get_PVGIS_data.py  get_Som_data.py  get_WIBEE_data.py  get_energy_forecast.py  get_openmeteo.py  get_prices_OMIE.py  get_prices_Som.py  get_prices_forecast.py  get_user_location.py  grafico_ESIOS_energy.py  grafico_openmeteo.py  grafico_prices_Som.py  grafico_prices_forecast.py  grafico_solar_today.py  load_secrets.py  mensaje.py  safe_request.py  sql_utilities.py
dashboard/data/: DATADIS_corrected.csv  costes_regulados.json  spot.csv
data/: dashboard.db
utilities/: ESIOS_data 2022-2025.csv  PVGIS_import.py  PVGIS_sintesis.py  Precio tarifa indexada.docx  Test 2108.py  Test_ESIOS.py  Test_ESIOS_analysis.py  Test_ESIOS_archives.py  Test_ESIOS_indicators.py  Test_ESIOS_widgets.py  Test_openmeteo_historical.py  Test_openmeteo_today.py  bateria.py  carga_desvios.py  carga_meteo.py  convert_local_UTC.py  desktop.ini  desvios.csv  forecast_snapshots.py  get_TG_ID.py  instalacion_streamlit.txt  lista indicadores.txt  lista_indicadores.json  meteo.csv  output.csv  table_to_csv.py  unpivot_som_prices.py  update_UTC_format.py  update_datadis_datetime.py
