[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard-energy"
version = "1.0.0"
description = "Aplicación integrada para visualización y predicción de precios de energía"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jose Luis GR", email = "joseluis@garciagruben.org"}
]
keywords = ["energy", "forecast", "streamlit", "ESIOS", "renewable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "streamlit>=1.54.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "plotly>=6.0.0",
    "requests>=2.31.0",
    "pytz>=2024.0",
    "python-dateutil>=2.8.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.0.0",
    "altair>=5.0.0",
    "holidays>=0.35",
    "openmeteo-requests>=1.7.0",
    "OMIEData>=0.4.0.0",
    "ephem>=4.1.0",
    "requests-cache>=1.1.0",
    "retry-requests>=2.0.0",
    "streamlit-geolocation>=0.0.10",
    "streamlit-js-eval>=1.0.0",
    "mplcursors>=0.5.0",
    "tenacity>=9.0.0",
    "tkcalendar>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
    "pre-commit>=3.0",
    "types-requests",
    "types-pytz",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "responses>=0.22.0",
]

docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "myst-parser>=1.0",
]

[project.urls]
Homepage = "https://github.com/joseluis-garcia/Dashboard"
Documentation = "https://github.com/joseluis-garcia/Dashboard/wiki"
Repository = "https://github.com/joseluis-garcia/Dashboard.git"
"Bug Tracker" = "https://github.com/joseluis-garcia/Dashboard/issues"

[project.scripts]
# Opcional: Crear comandos CLI para ejecutar las apps
dashboard-yesterday = "dashboard.apps.yesterday.app_Yesterday:main"
dashboard-tomorrow = "dashboard.apps.tomorrow.app_Tomorrow:main"
dashboard-estorninos = "dashboard.apps.estorninos.app_Estorninos:main"

[tool.setuptools]
packages = ["dashboard"]

[tool.setuptools.package-data]
dashboard = [
    "comun/icons/*.png",
    "py.typed",
]

# ====================================
# Configuración de herramientas
# ====================================

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directorios
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "plotly.*",
    "ephem",
    "holidays",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=dashboard --cov-report=html --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take a long time",
]

[tool.coverage.run]
source = ["dashboard"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
