[metadata]
name = dashboard-energy
version = attr: dashboard.__version__

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = .
include = dashboard*

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    venv,
    .eggs,
    *.egg,
    .mypy_cache,
    .pytest_cache,
    .coverage,
    htmlcov

[tool:pytest]
testpaths = tests
python_files = test_*.py

[bdist_wheel]
universal = 0
